--- a/storyWrite.css
+++ b/storyWrite.css
@@ -1,3 +1,40 @@
+html, body {
+    height: 100%;
+}
+#title {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    height: 10vh;
+    background-color: cornflowerblue;
+}
+
+.main-container {
+    min-height: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: lightblue;
+}
+
+nav {
+    background-color: hotpink;
+    width: 20vw;
+}
+
+.main-body {
+    width: 80vw;
+    padding: 30px;
+
+}
+
+footer {
+    width: 100%;
+    display: inline-block;
+    height: 10vh;
+    background-color: dodgerblue;
+}
+
+
 main {
     width:75vw;
     font-size: 1em;
@@ -29,10 +66,13 @@ form {
 
 textarea {
     position: relative;
+    width: 60%;
+    max-width: 100%;
+    margin-bottom: 2%;
 }
 
-form > input {
-    position: relative;
+form > input[type="submit"] {
+    position: absolute;
     bottom: 1%;
     right: 1%;
 }
