--- a/style.css
+++ b/style.css
@@ -1,23 +1,64 @@
 html, body {
     height: 100%;
 }
+
+header {
+    display: flex;
+    align-items: center;
+    background-color: #eee9d9;
+    height: 20vh;
+
+
+}
+
+.header-container {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+
 #title {
     width: 100%;
+    height: 95%;
+    display: flex;
+    align-items: center;
+
+}
+
+#title img {
+    height: 70px;
+}
+
+#title .subtitle {
+    font-family: 'Imprima', sans-serif;
+    line-height: 1.5em;
     display: inline-block;
-    text-align: center;
-    height: 10vh;
-    background-color: cornflowerblue;
+    width: 150px;
+    border-left: 2px solid #a3876e;
+    padding-left: 10px;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+.user-menu {
+    background-color: #511515;
+    color: #f9f8f0;
+    display: inline-block;
+    border-radius: 100px;
+    padding: 5px 10px;
+    float: right;
 }
 
 .main-container {
     min-height: 100%;
     display: flex;
     flex-direction: row;
-    background-color: lightblue;
+    background-color: #f9f8f0;
 }
 
 nav {
-    background-color: hotpink;
+    background-color: #511515;
     width: 20vw;
 }
 
