--- a/style.css
+++ b/style.css
@@ -24,9 +24,28 @@ nav {
 .main-body {
     width: 80vw;
     padding: 30px;
-
 }
 
+.prompts {
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.prompt-label {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.stories {
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+h4 {
+    font-weight: bold;
+}
 footer {
     width: 100%;
     display: inline-block;
