--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 header {
     display: flex;
     align-items: center;
-    background-color: #eee9d9;
+    background-color: #f1f4f7;
     height: 20vh;
 
 
@@ -16,10 +16,11 @@ header {
     margin: auto;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 #title {
-    width: 100%;
+
     height: 95%;
     display: flex;
     align-items: center;
@@ -42,13 +43,51 @@ header {
 }
 
 .user-menu {
-    background-color: #511515;
-    color: #f9f8f0;
-    display: inline-block;
-    border-radius: 100px;
-    padding: 5px 10px;
-    float: right;
+    font-family: 'Quando', serif;
+    width: 145px;
 }
+
+.user-menu-name {
+    border: 2px solid #3fcce5;
+    border-radius: 7px;
+    background-color: #f1f4f7;
+    padding: 5px 10px;
+    font-size: 1.25em;
+    box-sizing: border-box;
+    color: #3fcce5;
+
+}
+
+.user-menu-name span {
+    position: relative;
+    top: 2px;
+}
+
+.user-menu ul {
+    width: 145px;
+    display: none;
+    position: absolute;
+    padding: 5px 0;
+    list-style: none;
+    font-size: .9em;
+    border: 2px solid #3fcce5;
+    border-radius: 7px;
+}
+
+.user-menu ul li {
+    padding: 5px 10px;
+}
+
+.user-menu:hover .user-menu-name{
+    border-radius: 7px 7px 0 0;
+}
+
+.user-menu:hover ul{
+    border-top: none;
+    display: inline-block;
+    border-radius: 0 0 7px 7px;
+}
+
 
 .main-container {
     min-height: 100%;
@@ -60,6 +99,17 @@ header {
 nav {
     background-color: #511515;
     width: 20vw;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 1px;
+    padding: 10px;
+
 }
 
 .main-body {
