--- a/style.css
+++ b/style.css
@@ -36,10 +36,11 @@ header {
     line-height: 1.5em;
     display: inline-block;
     width: 150px;
-    border-left: 2px solid #a3876e;
+    border-left: 2px solid #ced3d7;
     padding-left: 10px;
     margin-left: 10px;
     margin-top: 5px;
+    color: #676184;
 }
 
 .user-menu {
@@ -72,10 +73,14 @@ header {
     font-size: .9em;
     border: 2px solid #3fcce5;
     border-radius: 7px;
+    background-color: #f1f4f7;
+
 }
 
 .user-menu ul li {
-    padding: 5px 10px;
+    padding: 7px 10px;
+    background-color: #f1f4f7;
+    color: #332d4e;
 }
 
 .user-menu:hover .user-menu-name{
@@ -86,6 +91,12 @@ header {
     border-top: none;
     display: inline-block;
     border-radius: 0 0 7px 7px;
+}
+
+.user-menu li:hover {
+    background-color: #3fcce5;
+    color: #f1f4f7;
+    cursor: pointer;
 }
 
 
