--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ html, body {
 header {
     display: flex;
     align-items: center;
-    background-color: #f1f4f7;
+    background-color: #fafbfc;
     height: 20vh;
-
+    border-bottom: 1px solid #dbe0e4;
 
 }
 
@@ -36,7 +36,7 @@ header {
     line-height: 1.5em;
     display: inline-block;
     width: 150px;
-    border-left: 2px solid #ced3d7;
+    border-left: 1px solid #ced3d7;
     padding-left: 10px;
     margin-left: 10px;
     margin-top: 5px;
@@ -45,17 +45,19 @@ header {
 
 .user-menu {
     font-family: 'Quando', serif;
-    width: 145px;
+    position: relative;
 }
 
 .user-menu-name {
-    border: 2px solid #3fcce5;
+    border: 1px solid #3fcce5;
     border-radius: 7px;
-    background-color: #f1f4f7;
-    padding: 5px 10px;
-    font-size: 1.25em;
+    background-color: #fafbfc;
+    padding: 9px 10px;
+    font-size: 1em;
     box-sizing: border-box;
     color: #3fcce5;
+    text-align: center;
+    box-shadow: 2px 2px #3fcce5;
 
 }
 
@@ -65,66 +67,77 @@ header {
 }
 
 .user-menu ul {
-    width: 145px;
+    width: 100%;
     display: none;
     position: absolute;
     padding: 5px 0;
     list-style: none;
     font-size: .9em;
-    border: 2px solid #3fcce5;
+    border: 1px solid #3fcce5;
     border-radius: 7px;
-    background-color: #f1f4f7;
+    background-color: #fafbfc;
+    box-shadow: 2px 2px #3fcce5;
 
 }
 
 .user-menu ul li {
     padding: 7px 10px;
-    background-color: #f1f4f7;
     color: #332d4e;
 }
 
 .user-menu:hover .user-menu-name{
     border-radius: 7px 7px 0 0;
+    border-bottom-color: #ced3d7;
 }
 
 .user-menu:hover ul{
+
     border-top: none;
     display: inline-block;
     border-radius: 0 0 7px 7px;
+    text-decoration: none;
+
 }
 
 .user-menu li:hover {
     background-color: #3fcce5;
     color: #f1f4f7;
     cursor: pointer;
+    text-decoration: none;
+
+}
+
+.user-menu a:hover {
+    text-decoration: none;
 }
 
 
 .main-container {
-    min-height: 100%;
+    min-height: 69vh;
     display: flex;
     flex-direction: row;
-    background-color: #f9f8f0;
+    background-color: #f1f4f7;
 }
 
 nav {
-    background-color: #511515;
-    width: 20vw;
+    width: 15vw;
+    background-color: #ced3d7;
+
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
+    padding: 0 10px;
 }
 
 nav ul li {
     margin: 1px;
-    padding: 10px;
+    padding: 7px;
 
 }
 
 .main-body {
-    width: 80vw;
+    width: 85vw;
     padding: 30px;
 }
 
@@ -152,5 +165,7 @@ footer {
     width: 100%;
     display: inline-block;
     height: 10vh;
-    background-color: dodgerblue;
+    background-color: #fafbfc;
+    border-top: 1px solid #dbe0e4;
+
 }
